--- a/app/src/main/res/layout/activity_searchresult.xml
+++ b/app/src/main/res/layout/activity_searchresult.xml
@@ -46,7 +46,7 @@
             android:layout_height="50dp"
             android:layout_alignParentStart="true"
             android:layout_centerVertical="true"
-            android:queryHint="Search Recipe"
+            android:queryHint="Search Recipe..."
             android:background="@drawable/background_bar"
             android:layout_marginStart="16dp"
             android:layout_marginTop="8dp"
