--- a/app/src/main/res/layout/fragment_cook_marked.xml
+++ b/app/src/main/res/layout/fragment_cook_marked.xml
@@ -27,12 +27,12 @@
                 android:gravity="center"
                 android:background="@color/purple">
 
-                <SearchView
+                <android.widget.SearchView
                     android:id="@+id/searchBar"
                     android:layout_width="350dp"
                     android:layout_height="wrap_content"
                     android:inputType="text"
-                    android:queryHint="Search CookMarked Recipe"
+                    android:queryHint="Search CookMarked Recipe..."
                     android:fontFamily="@font/poppins_regular"
                     android:textSize="16sp"
                     android:textColor="@color/black"
@@ -40,8 +40,7 @@
                     android:background="@drawable/background_searchbar"
                     android:queryBackground="@android:color/transparent"
                     android:backgroundTint="@android:color/white"
-                    android:iconifiedByDefault="false"
-                    />
+                    android:iconifiedByDefault="false" />
 
             </LinearLayout>
 
@@ -50,7 +49,6 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
                 android:gravity="center_horizontal"
-                android:layout_marginTop="20dp"
                 android:layout_marginBottom="90dp">
 
                 <TextView
