--- a/app/src/main/res/layout/today_menu_widget.xml
+++ b/app/src/main/res/layout/today_menu_widget.xml
@@ -17,7 +17,7 @@
         android:layout_marginEnd="20dp"
         android:ellipsize="end"
         android:maxLines="1"
-        android:text="Today's Meal Plan"/>
+        android:text="Random Meal Ideas"/>
 
     <ListView
         android:id="@+id/list_view"
